--- a/tests/multiply.scss
+++ b/tests/multiply.scss
@@ -14,7 +14,7 @@ $throw-catch: true !global;
 
 .multiply {
   /*
-  non-number
+  bad arguments
   ////////////////////////
   content: "ERROR: bool is an invalid factor";
   content: "ERROR: bool is an invalid factor";
