--- a/tests/renders/divide.dartsass.css
+++ b/tests/renders/divide.dartsass.css
@@ -8,11 +8,11 @@
   content: "ERROR: list is an invalid operand";
   content: "ERROR: list is an invalid operand";
   */
-  content: "ERROR: bool is an invalid operand";
-  content: "ERROR: bool is an invalid operand";
-  content: "ERROR: bool is an invalid operand";
-  content: "ERROR: list is an invalid operand";
-  content: "ERROR: list is an invalid operand";
+  content: "ERROR: divide($expr, $n): $n [false] is not a valid divisor";
+  content: "ERROR: divide($expr, $n): $expr [false] is not a valid dividend";
+  content: "ERROR: divide($expr, $n): $n [1.5em] is not a valid divisor";
+  content: "ERROR: divide($expr, $n): $n [1em 3] is not a valid divisor";
+  content: "ERROR: divide($expr, $n): $n [1.5em] is not a valid divisor";
   /*
   string arguments
   ////////////////////////
@@ -24,10 +24,10 @@
   content: calc((100% - 10px) / 2);
   */
   content: calc(1.5em / var(--foo));
-  content: "ERROR: 1.5em is an invalid divisor";
+  content: "ERROR: divide($expr, $n): $n [1.5em] is not a valid divisor";
   content: calc(var(--foo) / 2);
   content: calc(1.5em / calc(100% - 10px));
-  content: "ERROR: 1.5em is an invalid divisor";
+  content: "ERROR: divide($expr, $n): $n [0] is not a valid divisor";
   content: calc((100% - 10px) / 2);
   /*
   negative numbers
@@ -48,9 +48,9 @@
   content: "ERROR: list is an invalid operand";
   content: "ERROR: null is an invalid divisor";
   */
-  content: "ERROR: 0 is an invalid divisor";
-  content: "ERROR: list is an invalid operand";
-  content: "ERROR: null is an invalid divisor";
+  content: "ERROR: divide($expr, $n): $n [0] is not a valid divisor";
+  content: "ERROR: divide($expr, $n): $n [a b] is not a valid divisor";
+  content: "ERROR: divide($expr, $n): $n [null] is not a valid divisor";
   /*
   unit vs unitless zero
   ////////////////////////
