--- a/tests/renders/subtract.libsass.css
+++ b/tests/renders/subtract.libsass.css
@@ -8,11 +8,11 @@
   content: "ERROR: list is an invalid operand";
   content: "ERROR: list is an invalid operand";
   */
-  content: "ERROR: bool is an invalid operand";
-  content: "ERROR: bool is an invalid operand";
-  content: "ERROR: bool is an invalid operand";
-  content: "ERROR: list is an invalid operand";
-  content: "ERROR: list is an invalid operand";
+  content: "ERROR: subtract($expr1, $expr2): $expr2 [false] is not a valid subtrahend";
+  content: "ERROR: subtract($expr1, $expr2): $expr1 [false] is not a valid minuend";
+  content: "ERROR: subtract($expr1, $expr2): $expr1 [false] is not a valid minuend";
+  content: "ERROR: subtract($expr1, $expr2): $expr2 [1em 3] is not a valid subtrahend";
+  content: "ERROR: subtract($expr1, $expr2): $expr1 [foo bar] is not a valid minuend";
   /*
   string arguments: calc() or var()
   ////////////////////////
