--- a/tests/divide.scss
+++ b/tests/divide.scss
@@ -14,11 +14,11 @@ $throw-catch: true !global;
   /*
   non-number
   ////////////////////////
-  content: "ERROR: bool is an invalid operand";
-  content: "ERROR: bool is an invalid operand";
-  content: "ERROR: bool is an invalid operand";
-  content: "ERROR: list is an invalid operand";
-  content: "ERROR: list is an invalid operand";
+  content: "ERROR: divide($expr, $n): $n [false] is not a valid divisor";
+  content: "ERROR: divide($expr, $n): $expr [false] is not a valid dividend";
+  content: "ERROR: divide($expr, $n): $n [1.5em] is not a valid divisor";
+  content: "ERROR: divide($expr, $n): $n [1em 3] is not a valid divisor";
+  content: "ERROR: divide($expr, $n): $n [1.5em] is not a valid divisor";
   */
   content: inspect(divide(1.5em, false));
   content: inspect(divide(false, 1.5));
@@ -29,10 +29,10 @@ $throw-catch: true !global;
   string arguments
   ////////////////////////
   content: calc(1.5em / var(--foo));
-  content: "ERROR: 1.5em is an invalid divisor";
+  content: "ERROR: divide($expr, $n): $n [1.5em] is not a valid divisor";
   content: calc(var(--foo) / 2);
   content: calc(1.5em / calc(100% - 10px));
-  content: "ERROR: 1.5em is an invalid divisor";
+  content: "ERROR: divide($expr, $n): $n [0] is not a valid divisor";
   content: calc((100% - 10px) / 2);
   */
   content: inspect(divide(1.5em, var(--foo)));
@@ -56,9 +56,9 @@ $throw-catch: true !global;
   /*
   bad divisors
   ////////////////////////
-  content: "ERROR: 0 is an invalid divisor";
-  content: "ERROR: list is an invalid operand";
-  content: "ERROR: null is an invalid divisor";
+  content: "ERROR: divide($expr, $n): $n [0] is not a valid divisor";
+  content: "ERROR: divide($expr, $n): $n [a b] is not a valid divisor";
+  content: "ERROR: divide($expr, $n): $n [null] is not a valid divisor";
   */
   content: inspect(divide(2, 0));
   content: inspect(divide(1.5em, (a b)));
