--- a/tests/renders/multiply.libsass.css
+++ b/tests/renders/multiply.libsass.css
@@ -2,26 +2,23 @@
   /*
   bad arguments
   ////////////////////////
-  content: "ERROR: bool is an invalid factor";
-  content: "ERROR: bool is an invalid factor";
-  content: "ERROR: bool is an invalid factor";
-  content: "ERROR: list is an invalid factor";
-  content: "ERROR: list is an invalid factor";
-  content: calc(hello * 1);
-  content: calc(1 * hello);
-  content: calc(hello * hello);
+  content: "ERROR: multiply($expr1, $expr2): $expr2 [false] is not a valid factor";
+  content: "ERROR: multiply($expr1, $expr2): $expr1 [false] is not a valid factor";
+  content: "ERROR: multiply($expr1, $expr2): $expr1 [false] is not a valid factor";
+  content: "ERROR: multiply($expr1, $expr2): $expr2 [1em 3] is not a valid factor";
+  content: "ERROR: multiply($expr1, $expr2): $expr1 [foo bar] is not a valid factor";
   */
   content: "ERROR: multiply($expr1, $expr2): $expr2 [false] is not a valid factor";
   content: "ERROR: multiply($expr1, $expr2): $expr1 [false] is not a valid factor";
   content: "ERROR: multiply($expr1, $expr2): $expr1 [false] is not a valid factor";
   content: "ERROR: multiply($expr1, $expr2): $expr2 [1em 3] is not a valid factor";
   content: "ERROR: multiply($expr1, $expr2): $expr1 [foo bar] is not a valid factor";
-  content: calc(hello * 1);
-  content: calc(1 * hello);
-  content: calc(hello * hello);
   /*
   string arguments
   ////////////////////////
+  content: calc(hello * 1);
+  content: calc(1 * hello);
+  content: calc(hello * hello);
   content: calc(1.5em * var(--foo));
   content: calc(var(--foo) * 1.5em);
   content: calc(var(--foo) * 2);
@@ -30,6 +27,9 @@
   content: calc((100% - 10px) * 1.5em);
   content: calc((100% - 10px) * 2);
   */
+  content: calc(hello * 1);
+  content: calc(1 * hello);
+  content: calc(hello * hello);
   content: calc(1.5em * var(--foo));
   content: calc(var(--foo) * 1.5em);
   content: calc(var(--foo) * 2);
@@ -52,9 +52,9 @@
   /*
   bad factors
   ////////////////////////
-  content: "list is an invalid factor";
-  content: "null is an invalid factor";
-  content: "null is an invalid factor";
+  content: "ERROR: multiply($expr1, $expr2): $expr2 [a b] is not a valid factor";
+  content: "ERROR: multiply($expr1, $expr2): $expr2 [null] is not a valid factor";
+  content: "ERROR: multiply($expr1, $expr2): $expr1 [null] is not a valid factor";
   */
   content: "ERROR: multiply($expr1, $expr2): $expr2 [a b] is not a valid factor";
   content: "ERROR: multiply($expr1, $expr2): $expr2 [null] is not a valid factor";
